<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".TableLayout">


    <TableRow
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="116dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="85dp"
            android:contentDescription="@string/imgperson"
            app:srcCompat="@drawable/person" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="89dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:text="@string/txtname"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:autofillHints="@string/filltxtname"
            android:ems="10"
            android:hint="@string/filltxtname"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtphone"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="@string/filltxtphone"
            android:ems="10"
            android:hint="@string/filltxtphone"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtaddress"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="@string/filltxtaddress"
            android:ems="10"
            android:hint="@string/filltxtaddress"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="85dp"
            android:text="@string/btnsubmit" />
    </TableRow>
</TableLayout>